added Ruth's profile

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -315,14 +315,14 @@
                         </div>
                         <div class="col-lg-2 col-md-4 col-sm-6 col-6 text-center">
                             <div class="member">
-                                <img src="img/Clyde Pereira.png" alt="member 1" class="img-fluid">
+                                <img src="img/Ruth.jpg" alt="member 1" class="img-fluid">
                                 <div class="details">
-                                    <h3><a href="#ClydePereira" data-toggle="modal">Read Bio <i
+                                    <h3><a href="#RuthPrathibha" data-toggle="modal">Read Bio <i
                                                 class="fa fa-arrow-right"></i></a></h3>
                                 </div>
                             </div>
-                            <h5 class="membername">Clyde Pereira</h5>
-                            <p class="designation">Advisor</p>
+                            <h5 class="membername">Ruth Prathibha</h5>
+                            <p class="designation">Consulting Partner</p>
                         </div>
 
                     </div>
@@ -903,8 +903,8 @@
         </div>
     </div>
 
-    <!-- Clyde Pereira profile -->
-    <div class="modal" id="ClydePereira" tabindex="-1" role="dialog" aria-hidden="true" style="padding-right: 0px;">
+    <!-- Ruth Prathibha  profile -->
+    <div class="modal" id="RuthPrathibha" tabindex="-1" role="dialog" aria-hidden="true" style="padding-right: 0px;">
         <div class="modal-dialog modal-full" role="document">
             <div class="modal-content">
                 <div class="m-header">
@@ -919,41 +919,24 @@
                     <div class="container">
                         <div class="row justify-content-md-center">
                             <div class="col-sm-12 col-lg-12">
-                                <h1 class="popup-teammember">Clyde Pereira</h1>
-                                <p class="popup-design">Advisor</p>
+                                <h1 class="popup-teammember">Ruth Prathibha</h1>
+                                <p class="popup-design">Consulting Partner</p>
                             </div>
                             <div class="col-sm-6 col-lg-3">
-                                <img src="img/Clyde Pereira.png" alt="member 1" class="img-fluid">
+                                <img src="img/Ruth.jpg" alt="member 1" class="img-fluid">
                             </div>
                             <div class="col-sm-6 col-lg-5">
-                                <p>Clyde Pereira carries more than 30 years of CIO experience in the CPG Industry within
-                                    the Coca-Cola System. He was instrumental in developing the first SFA mobile
-                                    solutions used by most Western European bottling companies on SYMBOL MSI Terminals
-                                    and first merchandising solution built on the TCCC BASIS system platform. In CCH as
-                                    the CIO, he led the development of a windows version of the BASIS system to support
-                                    the expansion into Eastern Europe, which was subsequently handed over to TCCC to
-                                    deploy in over 400 small Bottlers across the globe. He also played a lead role in
-                                    building and deploying SAP template called Wave2 across 28 countries in 6 years. He
-                                    also represented TCCS as co-chair of The Consumer Goods Forum IT Committee for over
-                                    7 year</p>
+				<p>A visionary thinker with global perspective and entrepreneurial drive offering 21 years of diversified experience with year on year success in achieving exceptional results in highly competitive environments that demand continuous improvement and expansion</p>
 
-                                <p>As an Independent FMCG digital consultant, he developed the CCEAG Digital Strategy
-                                    which helped in the expansion of business processes into the retail and consumer
-                                    spectrum. He had a successful stint in leading the CCBSA merger and integration in
-                                    South Africa as the IT lead. As a consultant, he guided major CPG Brands on their
-                                    Digital and outsourcing strategies, by partnering with SalesForce, Deloitte and
-                                    Atos.</p>
+				<p>AS COO, She has proven success of building a 550 million working capital business from scratch. Expanding business footprint across 22 cities with 5 main hubs and scaled to a 4k people strong operations. Has been instrumental in adding various service verticals by transforming the company into integrated facilities management service provider.</p> 
 
-                                <p>Clyde’s association with Grassroots as the Brand Ambassador is a significant
-                                    achievement for us. His vision and expertise in implementing best practices will
-                                    guide Grassroots in carving a niche in the IT space. Clyde’s expertise in creating
-                                    Digital Strategy will ensure our clients get the right solutions. </p>
+				<p>A skilled negotiator and can quickly close on business opportunities with emphasis on bottom-line & customer delight. She brings expertise in P&L management, client relations and developing human resource capability in line with organization vision and strategy. Well versed in assessing competition and strengthening market share.</p> 
+				<p>Prathibha joining Grassroots will strengthen the core management team and also her connect and experience in the service industry will help us to enter newer markets and services.</p>
+
 
                                 <div class="social-links">Connect
                                     <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
                                     <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                                    <a href="https://www.linkedin.com/in/clydepereira/" class="linkedin"><i
-                                            class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
 
