disable ruth profile

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -313,7 +313,7 @@
                             <h5 class="membername">Shirish Sahay</h5>
                             <p class="designation">Grassroots, CEO - UK</p>
                         </div>
-                        <div class="col-lg-2 col-md-4 col-sm-6 col-6 text-center">
+                        <!-- <div class="col-lg-2 col-md-4 col-sm-6 col-6 text-center">
                             <div class="member">
                                 <img src="img/Ruth.jpg" alt="member 1" class="img-fluid">
                                 <div class="details">
@@ -323,7 +323,7 @@
                             </div>
                             <h5 class="membername">Ruth Prathibha</h5>
                             <p class="designation">Consulting Partner</p>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
