added blog link

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -65,6 +65,11 @@
                             <li><a href="business-applications.html">Business Applications and Products</a></li>
                         </ul>
                     </li>
+                    <li class="menu-has-children"><a href="#services">Resources</a>
+                        <ul style="display: none;">
+                            <li><a href="https://grassrootsbpoblogs.wordpress.com/">Blogs</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
