Shirish - bio; updated designation

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -866,7 +866,7 @@
                         <div class="row justify-content-md-center">
                             <div class="col-sm-12 col-lg-12">
                                 <h1 class="popup-teammember">Shirish Sahay</h1>
-                                <p class="popup-design">CEO (GRSSL)</p>
+                                <p class="popup-design">Non Executive Director (GRSSL)</p>
                             </div>
                             <div class="col-sm-6 col-lg-3">
                                 <img src="img/shirish.png" alt="member 1" class="img-fluid">
