--- a/public_html/index.html
+++ b/public_html/index.html
@@ -71,6 +71,7 @@
                         </ul>
                     </li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="#topfooter">Careers</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
