US, UK address -rows adusted

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -562,14 +562,14 @@
                         <div class="contact-email">
                             <address><strong class="red-txt">Sales Office</strong><span
                                      class="delivery-center">(USA)</span><br>
-			     Grassroots Solutions <br>& Services Inc,<br>3230, Fremont, CA 94539</address>
+			     Grassroots Solutions <br>& Services Inc,<br>3230, Fremont,<br> CA 94539, USA</address>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="contact-email">
                             <address><strong class="red-txt">Sales Office</strong><span
                                      class="delivery-center">(UK)</span><br>
-			     Grassroots Solutions <br>& Services Inc,<br>7 Bell Yard, London, WC2A 2JR</address>
+			     Grassroots Solutions <br>& Services Inc,<br>7 Bell Yard, London,<br> WC2A 2JR, UK</address>
                         </div>
                     </div>
 
