changed corporate address

--- a/public_html/business-applications.html
+++ b/public_html/business-applications.html
@@ -129,6 +129,8 @@
                                       interactions. The functionality of these solutions is not limited to desktops, but can be extended to
                                       Android mobile devices as well. Our team is also adept at developing Android apps to manage various
                                       customer interfacing processes.</p>
+
+                                      <a href='https://www.payfiller.com' target='new'><img src="img/pfwithword.svg" alt="Product" height="35px"></a>
                                 </div>
                             </div>
                     </div>
@@ -145,7 +147,7 @@
                                             Development Centres, Soft Landing services, Digital Incubation services and Digital Transformation
                                             services.</p>
 
-                                          <p><a href="https://www.grssl.uk/" target="_blank">Visit Grssl.uk </a></p>
+                                          <p><a href="https://www.grssl.com/" target="_blank">Visit www.grssl.com </a></p>
                                     </div>
                                 </div>
                         </div>
