--- a/public_html/index.html
+++ b/public_html/index.html
@@ -527,8 +527,9 @@
                     <div class="col-md-2">
                         <div class="contact-address">
                             <address><strong class="red-txt">Corporate Office</strong><br>
-                                #28, 7th Cross, Wilson Garden,<br>Bengaluru-560027,<br>
-                                Karnataka, India</address>
+
+                                #150C-A-6, Tower A, <br>4th Floor, Diamond District,<br>Bengaluru-560008 <br>Karnataka,
+                                India</address>
                         </div>
                     </div>
                     <div class="col-md-3">
