--- a/public_html/index.html
+++ b/public_html/index.html
@@ -538,7 +538,7 @@
                         <div class="contact-email">
                             <address><strong class="red-txt">Sales Office</strong><span
                                      class="delivery-center">(UK)</span><br>
-			     Grassroots Solutions <br>& Services Inc,<br>7 Bell Yard, London,<br> WC2A 2JR, UK</address>
+			     Grassroots Solutions <br>& Services Ltd,<br>7 Bell Yard, London,<br> WC2A 2JR, UK</address>
                         </div>
                     </div>
 
