--- a/public_html/index.html
+++ b/public_html/index.html
@@ -906,7 +906,7 @@
                         <div class="row justify-content-md-center">
                             <div class="col-sm-12 col-lg-12">
                                 <h1 class="popup-teammember">Sudhir Reddy</h1>
-                                <p class="popup-design">Head - Client Relations</p>
+                                <p class="popup-design">DGM - Customer Success</p>
                             </div>
                             <div class="col-sm-6 col-lg-3">
                                 <img src="img/sudeer-reddy.png" alt="member 1" class="img-fluid full-width">
@@ -1037,7 +1037,7 @@
                         <div class="row justify-content-md-center">
                             <div class="col-sm-12 col-lg-12">
                                 <h1 class="popup-teammember">Ravikanth V</h1>
-                                <p class="popup-design">Head - Operations</p>
+                                <p class="popup-design">Sr.Manager - Employee Experience</p>
                             </div>
                             <div class="col-sm-6 col-lg-3">
                                 <img src="img/ravikanth.png" alt="member 1" class="img-fluid full-width">
@@ -1125,7 +1125,7 @@
                         <div class="row justify-content-md-center">
                             <div class="col-sm-12 col-lg-12">
                                 <h1 class="popup-teammember">Sharath Kumar</h1>
-                                <p class="popup-design">Vice President - Operations</p>
+                                <p class="popup-design">VP - Customer Experience</p>
                             </div>
                             <div class="col-sm-6 col-lg-3">
                                 <img src="img/sharath.png" alt="member 1" class="img-fluid full-width">
@@ -1182,7 +1182,7 @@
                         <div class="row justify-content-md-center">
                             <div class="col-sm-12 col-lg-12">
                                 <h1 class="popup-teammember">Ben Subbarao</h1>
-                                <p class="popup-design">Head - HR, Training & Compliance</p>
+                                <p class="popup-design">Sr.Manager - Customer Success</p>
                             </div>
                             <div class="col-sm-6 col-lg-3">
                                 <img src="img/ben.png" alt="member 1" class="img-fluid full-width">
@@ -1274,7 +1274,7 @@
                         <div class="row justify-content-md-center">
                             <div class="col-sm-12 col-lg-12">
                                 <h1 class="popup-teammember">Veema Thimmaiah</h1>
-                                <p class="popup-design">Head - Site HR</p>
+                                <p class="popup-design">Sr.Manager - Employee Experience</p>
                             </div>
                             <div class="col-sm-6 col-lg-3">
                                 <img src="img/veema.png" alt="member 1" class="img-fluid full-width">
@@ -1465,7 +1465,7 @@
                         <div class="row justify-content-md-center">
                             <div class="col-sm-12 col-lg-12">
                                 <h1 class="popup-teammember">Ramesh</h1>
-                                <p class="popup-design">Head - Administration</p>
+                                <p class="popup-design">Sr. Manager - Admin & Procurement</p>
                             </div>
                             <div class="col-sm-6 col-lg-3">
                                 <img src="img/ramesh.png" alt="member 1" class="img-fluid full-width">
