corrected Gajendra title

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1082,7 +1082,7 @@
                         <div class="row justify-content-md-center">
                             <div class="col-sm-12 col-lg-12">
                                 <h1 class="popup-teammember">Gajendra Singh</h1>
-                                <p class="popup-design">Head - IT</p>
+                                <p class="popup-design">Sr.Manager - IT</p>
                             </div>
                             <div class="col-sm-6 col-lg-3">
                                 <img src="img/Gajendra.jpg" alt="member 1" class="img-fluid full-width">
