removal of ben profile

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -375,7 +375,7 @@
                         <h5 class="membername">Ajith Prasad</h5>
                         <p class="designation">Head - Operations</p>
                     </div> -->
-                    <div class="col-lg-2 col-md-4 col-sm-6 col-6 text-center">
+                    <!-- <div class="col-lg-2 col-md-4 col-sm-6 col-6 text-center">
                         <div class="member">
                             <img src="img/ben.png" alt="member 1" class="img-fluid">
                             <div class="details">
@@ -385,7 +385,7 @@
                         </div>
                         <h5 class="membername">Ben Subbarao</h5>
                         <p class="designation">Sr.Manager - Customer Success</p>
-                    </div>
+                    </div> -->
                         <!--<div class="col-lg-2 col-md-4 col-sm-6 col-6 text-center">
                             <div class="member">
                                 <img src="img/ravikanth.png" alt="member 1" class="img-fluid">
@@ -1166,7 +1166,7 @@
 
 
     <!-- ben profile -->
-    <div class="modal" id="ben" tabindex="-1" role="dialog" aria-hidden="true" style="padding-right: 0px;">
+    <!-- <div class="modal" id="ben" tabindex="-1" role="dialog" aria-hidden="true" style="padding-right: 0px;">
         <div class="modal-dialog modal-full" role="document">
             <div class="modal-content">
                 <div class="m-header">
@@ -1200,14 +1200,14 @@
                                     <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                     <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
                                 </div>
-                            </div>
-
+                            </div> -->
+<!-- 
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- deepak profile -->
     <div class="modal" id="deepak" tabindex="-1" role="dialog" aria-hidden="true" style="padding-right: 0px;">
         <div class="modal-dialog modal-full" role="document">
