--- a/public_html/index.html
+++ b/public_html/index.html
@@ -649,9 +649,13 @@
                         <h3 style="color: #fff; font-weight: 100;">We’re Hiring! </h3>
                     </div>
                     <div class="col-lg-4 col-md-6 text-center">
-                        <p>To apply click <a style="color:#000;" href="https://career.grssl.com" target="_blank">here  </a>
+                        <p>To apply click <a style="color:#000;" href="https://career.grssl.com" target="_blank"> here  </a>
   or give us a missed call for an excellent career opportunity.</p>
-                        <p><strong>Jobs</strong> <br> career@grassrootsbpo.com <br>Bangalore – 080 4929 2420, 080 4929
+
+                        <p>To view current Jobs  Click <a style="color:#000;" href="https://jobboard.grssl.net" target="_blank"> here  </a>
+			  </p>
+			
+			<p><strong>Jobs</strong> <br> career@grassrootsbpo.com <br>Bangalore – 080 4929 2420, 080 4929
                             2468<br> Mysore – 0821-354 1009</p>
 
 
