--- a/public_html/index.html
+++ b/public_html/index.html
@@ -71,7 +71,7 @@
                         </ul>
                     </li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="#topfooter">Careers</a></li>
+                    <li><a href="https://jobboard.grssl.net">Careers</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
@@ -344,7 +344,7 @@
                         <!-- <div></div> -->
                         <!-- <div></div> -->
 
-                         <div class="col-lg-2 col-md-4 col-sm-6 col-6 text-center">
+                        <!--<div class="col-lg-2 col-md-4 col-sm-6 col-6 text-center">
                         <div class="member">
                             <img src="img/suma.jpeg" alt="member 1" class="img-fluid">
                             <div class="details">
@@ -353,7 +353,7 @@
                         </div>
                         <h5 class="membername"> Suma Ravindran</h5>
                         <p class="designation">VP - Employee Experience</p>
-                    </div> 
+                    </div>-->
                     <div class="col-lg-2 col-md-4 col-sm-6 col-6 text-center">
                         <div class="member">
                             <img src="img/sudeer-reddy.png" alt="member 1" class="img-fluid">
